<resources>
    <string name="app_name">中国环境</string>


    <string name="me_login">登录</string>
    <string name="login_login_now_str">立即登录</string>
    <string name="login_welcome_str">欢迎光临中国环境</string>
    <string name="settings_fav_str">我的收藏</string>
    <string name="settings_comment_str">我的评论</string>
    <string name="settings_push_nofitify_str">消息通知</string>
    <string name="settings_clear_cache_str">清理缓存</string>
    <string name="settings_size_default_str">1.53M</string>
    <string name="settings_advice_str">意见反馈</string>
    <string name="settings_about_str">关于我们</string>
    <string name="settings_version_str">版本升级</string>
    <string name="settings_version_default_str">1.0.0</string>
    <string name="home_jiance_renwu">检测任务</string>
    <string name="home_baogaosuju">报告数据</string>
    <string name="home_jiance_renwu_liebiao">任务列表</string>
    <string name="home_baogaosuju_chakan">报告数据在线查看</string>
    <string name="home_dilizhanshi">地理展示</string>
    <string name="home_ditu">地图</string>
    <string name="home_gongzuojilu">工作记录</string>
    <string name="home_gongzuojilu_chakan">工作记录查看</string>
    <string name="home_jiancexinxi">监测信息</string>
    <string name="home_jiancexinxi_chakan">各地环境指数比对查看</string>
    <string name="resource">资料</string>
    <string name="search_keyworld_hint">请输入关键字</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_nofind_world_1">找不到与“</string>
    <string name="search_nofind_world_2">”相符的结果</string>
    <string name="input_phone">请输入电话号码</string>
    <string name="movies_top">今日热映</string>
    <string name="movies_in_theaters">正在上映</string>
</resources>
