<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.dy.baseutils.view.CircleImageView1
            android:id="@+id/img_icon"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_account_circle_white_48dp" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_icon"
            android:layout_marginTop="16dp"
            android:text="@string/login_login_now_str"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_icon"
            android:layout_marginTop="5dp"
            android:alpha="0.5"
            android:text="@string/login_welcome_str"
            android:textColor="#ffffff"
            android:textSize="12sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/layout_collect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/pressbg_list_item"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_collect_xhdpi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/settings_fav_str"
                android:textColor="#727272"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/line_height"
            android:layout_height="match_parent"
            android:background="@color/line_color" />

        <LinearLayout
            android:id="@+id/layout_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/pressbg_list_item"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_comment_xhdpi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/settings_comment_str"
                android:textColor="#727272"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_push"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/pressbg_list_item"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_swap_vert_circle_grey600_36dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="45dp"
                    android:text="@string/settings_push_nofitify_str"
                    android:textColor="#4c4c4c"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cb_push"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:button="@drawable/user_push_selector" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="40dp"
                android:background="@color/line_color" />


            <RelativeLayout
                android:id="@+id/layout_clear"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/pressbg_list_item"
                android:clickable="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_cloud_circle_grey600_36dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="45dp"
                    android:text="@string/settings_clear_cache_str"
                    android:textColor="#4c4c4c"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tv_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/settings_size_default_str"
                    android:textColor="#727272"
                    android:textSize="14sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="40dp"
                android:background="@color/line_color" />


            <RelativeLayout
                android:id="@+id/layout_reply"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/pressbg_list_item"
                android:clickable="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_question_vert_circle_grey600_36dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="45dp"
                    android:text="@string/settings_advice_str"
                    android:textColor="#4c4c4c"
                    android:textSize="14sp" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_arrow_xhdpi" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="40dp"
                android:background="@color/line_color" />


            <RelativeLayout
                android:id="@+id/layout_about_us"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/pressbg_list_item"
                android:clickable="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_supervisor_account_grey600_36dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="45dp"
                    android:text="@string/settings_about_str"
                    android:textColor="#4c4c4c"
                    android:textSize="14sp" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_arrow_xhdpi" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="40dp"
                android:background="@color/line_color" />


            <RelativeLayout
                android:id="@+id/layout_version"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/pressbg_list_item"
                android:clickable="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_group_work_grey600_36dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="45dp"
                    android:text="@string/settings_version_str"
                    android:textColor="#4c4c4c"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/settings_version_default_str"
                    android:textColor="#727272"
                    android:textSize="14sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/line_color" />


</LinearLayout>