<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/a__home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.dy.baseutils.view.viewpager.autoscroll.AutoScrollViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>


            <LinearLayout
                android:id="@+id/viewGroup"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="-30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:background="@color/bantouming">
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/layout_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/pressbg_list_item"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_renwujilu" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/home_jiance_renwu"
                            android:textColor="#727272"
                            android:textSize="@dimen/text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/home_jiance_renwu_liebiao"
                            android:textColor="@color/text_gray"
                            android:textSize="@dimen/text_descript" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="@dimen/line_height"
                    android:layout_height="match_parent"
                    android:background="@color/line_color" />

                <LinearLayout
                    android:id="@+id/layout_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/pressbg_list_item"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_meiriqiandao" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/home_baogaosuju"
                            android:textColor="#727272"
                            android:textSize="@dimen/text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_marginTop="5dp"
                            android:text="@string/home_baogaosuju_chakan"
                            android:lines="1"
                            android:ellipsize="end"
                            android:textColor="@color/text_gray"
                            android:textSize="@dimen/text_descript" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/layout_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/pressbg_list_item"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ranking_fenlei" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/home_dilizhanshi"
                            android:textColor="#727272"
                            android:textSize="@dimen/text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_marginTop="5dp"
                            android:lines="1"
                            android:ellipsize="end"
                            android:text="@string/home_ditu"
                            android:textColor="@color/text_gray"
                            android:textSize="@dimen/text_descript" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="@dimen/line_height"
                    android:layout_height="match_parent"
                    android:background="@color/line_color" />

                <LinearLayout
                    android:id="@+id/layout_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/pressbg_list_item"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_yijianfankui" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/home_gongzuojilu"
                            android:textColor="#727272"
                            android:textSize="@dimen/text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/home_gongzuojilu_chakan"
                            android:layout_marginTop="5dp"
                            android:lines="1"
                            android:ellipsize="end"
                            android:textColor="@color/text_gray"
                            android:textSize="@dimen/text_descript" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_color" />

            <LinearLayout
                android:id="@+id/layout_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/pressbg_list_item"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_yanzhengma" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/home_jiancexinxi"
                        android:textColor="#727272"
                        android:textSize="@dimen/text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/home_jiancexinxi_chakan"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/text_descript" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="每日更新"
                            android:textColor="@color/tool_orange"
                            android:background="@drawable/bg_tips_orange"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:textSize="@dimen/text_descript"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="权威发布"
                            android:textColor="@color/tool_orange"
                            android:background="@drawable/bg_tips_orange"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:layout_marginLeft="5dp"
                            android:textSize="@dimen/text_descript"/>

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_color" />


            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_color" />

            <LinearLayout
                android:id="@+id/layout_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/pressbg_list_item"
                android:gravity="center_vertical"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/login_btn_yx_n" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="每日环保动向"
                        android:textColor="#727272"
                        android:textSize="@dimen/text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="环境数据指南"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/text_descript" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="环保咨询"
                            android:textColor="@color/tool_orange"
                            android:background="@drawable/bg_tips_orange"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:textSize="@dimen/text_descript"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="环保数据解读"
                            android:textColor="@color/tool_orange"
                            android:background="@drawable/bg_tips_orange"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:layout_marginLeft="5dp"
                            android:textSize="@dimen/text_descript"/>

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_color" />


            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/touming"
                />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
